Hopefully fixed the crashing issues with Biomes o' plenty